Fix icon layout and add CSS truncating to object names

--- a/src/ServicePulse.Host/app/css/particular.css
+++ b/src/ServicePulse.Host/app/css/particular.css
@@ -452,12 +452,12 @@ h3 {
     text-align: center;
 }
 
-    .summary-item .badge, .summary-item .label {
-        font-size: 18px;
-        margin-left: 12px;
-        position: absolute;
-        top: 2px;
-    }
+.summary-item .badge, .summary-item .label {
+    font-size: 18px;
+    margin-left: 12px;
+    position: absolute;
+    top: 2px;
+}
 
 .summary-info, .summary-info > .fa, a.summary-info:hover {
     color: #777f7f;
@@ -1794,7 +1794,7 @@ hr.top-separator {
       font-size: 12px;
       text-transform: uppercase;
       color: #181919;
-      display: inline-block;
+      text-transform: initial;
   }
 
 .table-head-row span.table-header-unit {
@@ -1814,10 +1814,9 @@ p.col-sort-active {
     margin-top: 15px;
 }
 
-    .endpoint-name a:hover {
-        text-decoration: none !important;
-        margin-top: 20px;
-    }
+.endpoint-name a:hover {
+    text-decoration: none !important;
+}
 
 .tooltip-inner {
     width: 200px;
@@ -1826,6 +1825,7 @@ p.col-sort-active {
 .endpoint-status {
     display: inline-block;
     position: absolute;
+    top: 1px;
     margin-left: 7px;
 }
 
@@ -1839,7 +1839,6 @@ h1 .endpoint-status i.fa-envelope, .endpoint-status i.fa-exclamation-triangle {
 }
 
 .endpoint-status i.fa-envelope {
-    position: relative;
     color: #777f7f;
 }
 
@@ -1847,15 +1846,9 @@ h1 .endpoint-status i.fa-envelope, .endpoint-status i.fa-exclamation-triangle {
     color: #23527c;
 }
 
-.endpoint-status i.fa-exclamation-triangle {
-    position: relative;
-    top: 1px;
-    margin-right: 6px;
-}
-
 .endpoint-status .badge {
     position: relative;
-    top: 6px;
+    top: 8px;
     font-size: 10px;
     margin-right: 0;
     left: -10px;
@@ -1863,8 +1856,39 @@ h1 .endpoint-status i.fa-envelope, .endpoint-status i.fa-exclamation-triangle {
 
 .endpoint-status i.fa-envelope, .endpoint-name i.fa-exclamation-triangle {
     font-size: 20px;
-    color: #CE4844;
     margin-left: 6px;
+}
+
+.endpoint-status a {
+    position: relative;
+    top: -8px;
+    padding-left: 0;
+}
+
+.endpoint-status a:hover {
+    text-decoration: none;
+}
+
+.monitoring-head .endpoint-status {
+    top: 0;
+}
+
+.monitoring-head .endpoint-status a {
+    top: 0;
+}
+
+.monitoring-head i.fa.fa-envelope {
+    font-size: 26px;
+    position: relative;
+    top: -4px;
+    left: 1px;
+}
+
+.monitoring-head .endpoint-status .badge {
+    position: relative;
+    top: 4px;
+    left: -12px;
+    font-size: 10px;
 }
 
 .endpoint-status .badge {
@@ -1970,7 +1994,7 @@ h1 .endpoint-status i.fa-envelope, .endpoint-status i.fa-exclamation-triangle {
     margin-right: 24px;
     color: #8C8C8C;
     font-weight: normal;
-    font-size: 14px;
+    font-size: 12px;
     float: left;
 }
 
@@ -2028,8 +2052,7 @@ i.fa-exclamation-triangle {
      display: inline-block;
 }
 
-.back-nav
-{
+.back-nav {
     position: absolute;
     top: 80px;
     text-transform: uppercase;
@@ -2061,15 +2084,14 @@ i.fa-exclamation-triangle {
     background-repeat: no-repeat;
 }
 
-.monitoring-head .pa-endpoint-lost.endpoint-details, .monitoring-head .pa-monitoring-lost.endpoint-details {
+.monitoring-head .endpoint-status .pa-endpoint-lost.endpoint-details, .monitoring-head .endpoint-status .pa-monitoring-lost.endpoint-details {
     width: 23px;
     height: 23px;
 }
 
-.endpoint-status .pa-endpoint-lost.endpoint-details, .endpoint-status .pa-monitoring-lost.endpoint-details {
+.endpoint-status .pa-endpoint-lost.endpoint-details, .endpoint-status .pa-monitoring-lost.endpoint-details, .endpoint-status .pa-endpoint-lost.endpoints-overview, .endpoint-status .pa-monitoring-lost.endpoints-overview {
     width: 20px;
     height: 20px;
-    top: -2px;
     left: 6px;
     position: relative;
 }
@@ -2077,4 +2099,31 @@ i.fa-exclamation-triangle {
 .monitoring-head .back-nav {
     position: absolute;
     top: 80px;
+}
+
+.endpoint-message-types .endpoint-status {
+    margin-top: -1px;
+}
+
+i.fa.pa-endpoint-lost.endpoints-overview, i.fa.pa-monitoring-lost.endpoints-overview {
+    position: relative;
+    top: 8px;
+    margin-right: 4px;
+}
+
+.endpoint-name .lead {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+@media (min-width: 1200px) {
+    .col-lg-max-8 {
+        max-width: 66%;
+        float: left;
+    }
+    .col-lg-max-9 {
+        max-width: 76%;
+        float: left;
+    }
 }
